syntax = "proto3";

option go_package = "/pkg/book";

service BookService {
    rpc AddBook(AddBookRequest) returns (AddBookResponse);
    rpc GetBook(GetBookRequest) returns (Book);
}

message AddBookRequest {
    string title = 1;
    string author = 2;
}

message AddBookResponse {
    string book_id = 1;
}

message GetBookRequest {
    string book_id = 1;
}

message Book {
    string book_id = 1;
    string title = 2;
    string author = 3;
}
